# experiment-app

./: .flake8  .gitignore  .htmlhintrc  .prettierrc  .stylelintrc.json  Makefile  eslint.config.js  logfile  mypy.ini  package-lock.json  package.json  pyproject.toml
backend/: manage.py
backend/apps/authentication/: apps.py  forms.py  models.py  serializers.py  signals.py  tokens.py  urls.py  utils.py  views.py
backend/apps/authentication/migrations/: 0001_initial.py  0002_userprofile_location_alter_userprofile_user.py  0003_userprofile_profile_picture.py
backend/apps/authentication/templatetags/: custom_filters.py  (+1 more)
backend/apps/experiments/: models.py  serializers.py  urls.py  views.py
backend/apps/settings/: urls.py  views.py
backend/config/: settings.py  swagger.py  urls.py
frontend/static/js/: cities.js
frontend/templates/: base.html  home.html  login.html  nav.html  register.html
frontend/templates/account/: verification_sent.html
frontend/templates/auth/: profile.html  profile_edit.html  user_profile.html
frontend/templates/experiments/: create_experiment.html  experiment_detail.html  my_experiments.html  workspace.html
frontend/templates/registration/: password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html
frontend/templates/settings/: account_settings.html  app_settings.html  settings.html
frontend/templates/socialaccount/: login.html
scripts/: format_html.sh  postprocess.py  preprocess.py  process_html.py
stubs/allauth/account/: models.pyi
stubs/environ/: __init__.pyi
(+4 files in other folders)
